--- a/service-files/user.service
+++ b/service-files/user.service
@@ -3,8 +3,8 @@ Description = User Service
 [Service]
 User=roboshop
 Environment=MONGO=true
-Environment=REDIS_HOST=redis.learntechnology.cloud
-Environment=MONGO_URL="mongodb://mongodb.learntechnology.cloud:27017/users"
+Environment=REDIS_HOST=redis-dev.learntechnology.cloud
+Environment=MONGO_URL="mongodb://mongodb-dev.learntechnology.cloud:27017/users"
 ExecStart=/bin/node /app/server.js
 SyslogIdentifier=user
 
