Project Ansible:  Frontend File.

--- a/01-frontend.yml
+++ b/01-frontend.yml
@@ -4,6 +4,9 @@
   vars:
     - component: frontend
   tasks:
+    - name: Set a hostname
+      ansible.builtin.hostname:
+        name: "{{component}}"
     - name: Installing Nginx.
       ansible.builtin.yum:
         name: nginx
