Project Ansible:  Frontend File.

--- a/01-frontend.yml
+++ b/01-frontend.yml
@@ -1,6 +1,6 @@
-- name: "{{component}}" Web Server Setup
+- name: Nginx Web Server Setup
   hosts: all
-  become: yes
+  become: True
   vars:
     - component: frontend
   tasks:
