--- a/03-catalogue.yml
+++ b/03-catalogue.yml
@@ -9,5 +9,5 @@
       ansible.builtin.hostname:
         name: "{{component}}"
 
-    - name: "{{component}}" Application Setup.
+    - name: Import task from nodejs.yml.
       ansible.builtin.import_tasks: nodejs.yml
